web/videotranscoding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: videotranscoding
  namespace: web
  labels:
    app: tautulli
spec:
  selector:
    app: videotranscoding
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
